maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:19: error: Unit does not take parameters
    };gauche()();hand()
              ^