maze.island.IslandMaze.scala.code
def hand() {
  if (!estFaceMur()) {avance()}  
  else {
    gauche()   
    if (estFaceMur()) {droite();if (estFaceMur()) {droite()}}
    avance()
  }
}




override def run() {
  while (!estSurBiscuit()) {
    while (getDirection() == Direction.NORTH){
    if (estFaceMur()) {
      gauche();hand()};avance()
    };gauche()();hand()
  };prendBiscuit()
}
